--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+September 24, 2020
+------------------
+
+Adapted to comply with modern cmake (and thus make it possible to use as a submodule) 2020 by Till Bovermann (@LFSaw).
+
+
+
 April 9, 2013
 -------------
 
@@ -69,7 +76,7 @@ of oscpack.
     
     - Fixed bug in posix SocketReceiveMultiplexer::Run() that would cause 
     packets to stop being received if select() returned EINTR. 
-    (thanks to Björn Wöldecke)
+    (thanks to BjÃ¶rn WÃ¶ldecke)
     
     - Updated and improved Makefile to avoid redundant re-linking
     (thanks to Douglas Mandell)
@@ -81,7 +88,7 @@ of oscpack.
     boilerplate). See LICENSE file.
 
 Thanks to Tim Blechmann, Rob Canning, Gwydion ap Dafydd, David Doria, 
-Christopher Delaney, Jon McCormack, Douglas Mandell, Björn Wöldecke,
+Christopher Delaney, Jon McCormack, Douglas Mandell, BjÃ¶rn WÃ¶ldecke,
 all the guys at openFrameworks, and everyone who reported bugs, 
 submitted patches and helped out with testing this release.
 
